Documented the "short" period of the LCG (the "fast" generator).
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@350 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_random.tex
+++ b/esl_random.tex
@@ -19,7 +19,9 @@ initialize (about 20x) and somewhat faster to generate samples (about
 25\%), while still generating pseudorandom numbers suitable for most
 applications. Because of its initialization speed, the LCG is
 advantageous when a small number of reasonably random samples is
-needed in a speed-critical application.
+needed in a speed-critical application. However, it has a relatively
+short period ($2^32$), making it entirely unsuitable for large
+simulations.
 
 Bit streams from \ccode{esl\_random()}'s two generators were tested
 against a National Institute of Standards and Technology statistical
