bug #h59 fix: esl_{sq,msa}_Set*() functions couldn't handle strings containing naked % characters. Needed to split functionality; now esl_{sq,msa}_Set*() functions take a const string argument (only), and new esl_{sq,msa}_Format*() options take printf()-style argument. [xref J5/75]
Also, I think I must have changed something in Checksum
functions. HMMER mapali test failed, because of a checksum difference.
I don't recall what I changed. Rebuilt the HMMs in the HMMER
testsuite.




git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@389 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/codestyle.tex
+++ b/documentation/codestyle.tex
@@ -722,13 +722,26 @@ object, just as if it had been \ccode{\_Create}'d. Throws NULL if
 allocation fails.
 
 \hypertarget{ifc:Set}
-{\item[\_Set*(obj, value...)]}
+{\item[\_Set*(obj, value)]}
 
-Initializes some value(s) in \ccode{obj} to
-\ccode{value}. \ccode{\_Set} functions have some appropriate longer
-name, like \ccode{\_SetZero()} (set something in an object to
-zero(s)), or \ccode{esl\_dmatrix\_SetIdentity()} (set a dmatrix to an
-identity matrix).
+Sets some value(s) in \ccode{obj} to \ccode{value}. If a value was
+already set, it is replaced with the new one. If any memory needs to
+be reallocated or free'd, this is done. \ccode{\_Set} functions have
+some appropriate longer name, like \ccode{\_SetZero()} (set something
+in an object to zero(s)), or \ccode{esl\_dmatrix\_SetIdentity()} (set
+a dmatrix to an identity matrix).
+
+\hypertarget{ifc:Format}
+{\item[\_Format*(obj, fmtstring, ...)]}
+
+Like \ccode{\_Set}, but with \ccode{printf()}-style semantics.  Sets
+some string value in \ccode{obj} according to the
+\ccode{printf()}-style \ccode{fmtstring} and any subsequence
+\ccode{printf()}-style arguments. If a value was already set, it is
+replaced with the new one. If any memory needs to be reallocated or
+free'd, this is done.  \ccode{\_Format} functions have some
+appropriate longer name, like
+\ccode{esl\_msa\_FormatSeqDescription()}.
 
 \hypertarget{ifc:Get}
 {\item[value = \_Get*(obj, ...)]}
