Was working on man pages for HMMER; added c2optlist and man2optlist, scripts to output lists of options in a .c or .man file.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@391 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/codestyle.tex
+++ b/documentation/codestyle.tex
@@ -743,6 +743,11 @@ free'd, this is done.  \ccode{\_Format} functions have some
 appropriate longer name, like
 \ccode{esl\_msa\_FormatSeqDescription()}.
 
+Because \ccode{fmtstring} is a \ccode{printf()}-style format string,
+it must not contain '\%' characters. \ccode{\_Format*} functions
+should only be used with format strings set by a program; they should
+not be used to copy user input that might contain '\%' characters.
+
 \hypertarget{ifc:Get}
 {\item[value = \_Get*(obj, ...)]}
 
