--- a/1.0/miniapps/esl-sfetch.man
+++ b/1.0/miniapps/esl-sfetch.man
@@ -149,8 +149,6 @@ standard input. However, because a standard input stream can't be SSI indexed,
 may be slow.
 
 
-
-
 .SH OPTIONS
 
 .TP
@@ -303,20 +301,43 @@ package with the
 option to
 .B cmsearch.
 The subsequences listed in the tab file will be fetched. The names of
-those sequences will have the hit coordinates, bit score, E-value (if
-available) and GC content appended to them. 
+those sequences will have the model name (if available), hit
+coordinates, bit score, E-value (if available) and GC content appended
+to them. 
 
 .TP
-.BI --shortname
+.B --shortname
 With the 
 .B -C 
 and 
 .B -f 
 and
-.BI --tabfile " <f>"
-options, do not 
-append the bit score, E-value and GC content to the names of the
-fetched sequences.
+.B --tabfile
+options, do not append the model name, bit score, E-value nor GC
+content to the names of the fetched sequences.
+
+.TP
+.BI --Tmin
+With the 
+.B -C 
+and 
+.B -f 
+and
+.B --tabfile
+options, only fetch sequences with bit scores greater than or equal to
+.I <x>.
+
+.TP
+.BI --Emax
+With the 
+.B -C 
+and 
+.B -f 
+and
+.B --tabfile 
+options, only fetch sequences with E-values less than (better than) or
+equal to 
+.I <x>.
 
 .SH AUTHOR
 
