--- a/miniapps/esl-alimerge.man
+++ b/miniapps/esl-alimerge.man
@@ -91,6 +91,11 @@ This option can only be used in combination with the
 option (so that the printed info doesn't corrupt the output alignment
 file).
 
+.TP
+.B --rfonly
+Only include columns that are not gaps in the GC RF annotation in the
+merged alignment. 
+
 .TP 
 .BI --outformat "<s> "
 Specify that the output alignment be format 
