Added some support for memory efficient reading and writing of Pfam formatted MSAs to esl_msa and esl-alimerge. The memory required is independent of the size of the alignment.
esl_msa: Added two new exposed functions:

esl_msa_ReadNonSeqInfoPfam(): Reads a Pfam formatted MSA from a file
and creates a new ESL_MSA that has only non-sequence information in
it, i.e. it contains comments, #=GF, and #=GC information, but no
#=GS, aligned sequence, or #=GR information. Several other values can
be optionally returned such as number of sequences, alignment length,
max length of a sequence name etc.

esl_msa_RegurgitatePfam(): Reads and immediately writes each line of a
Pfam alignment to an output file, after optionally removing some
columns or adding 100% gap columns at specified positions. Many input
arguments allow various parts of the alignment to be regurgitated or
not output depending on needs of caller.

All included functionality and complexity of these functions was
necessary to get them working for my purposes in esl-alimerge, which
with --savemem now reads and writes alignments with RAM requirements
independent of the sizes of those alignments (provided they're Pfam
format). They are included in the API because the plan is to
eventually call them from other miniapps and probably cmalign.

The esl_msa unit tests have been updated to test these functions and
the esl-alimerge documentation and perl itest has been updated to
include --savemem.

esl-ssdraw.c: minor cleaning to silence compiler warnings.


git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@469 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/esl-alimerge.man
+++ b/miniapps/esl-alimerge.man
@@ -48,10 +48,10 @@ insert columns in the other input alignments can be accomodated in the
 merged alignment.
 
 If the output format is Stockholm or Pfam, annotation will be
-transferred from the input alignments to the merged alignment, as
+transferred from the input alignments to the merged alignment as
 follows. All per-sequence ('#=GS') and per-residue ('#=GR') annotation
 is transferred.  Per-file ('#=GF') annotation is transferred if it is
-present and identical in all files.  Per-column ('#=GC') annotation is
+present and identical in all alignments.  Per-column ('#=GC') annotation is
 transferred if it is present and identical in all alignments once all
 insert positions have been removed 
 .B and 
@@ -66,6 +66,29 @@ is a file listing alignment files to merge. In the list file, blank
 lines and lines that start with '#' (comments) are ignored. Each data
 line contains a single word: the name of an alignment file to be
 merged. All alignments in each file will be merged.
+
+With the
+.B --savemem
+option, 
+.B esl-alimerge
+will operate in memory saving mode and the required RAM for the merge
+will be minimal (should be only a few Mb) and independent of the
+alignment sizes. To use 
+.B --savemem,
+all alignments must be in Pfam format (non-interleaved, 1
+line/sequence Stockholm format). You can reformat alignments to Pfam
+using the
+.B esl-reformat
+Easel miniapp. Without 
+.B --savemem
+the required RAM will be equal to roughly the size of the final merged
+alignment file which will necessarily be at least the summed size of
+all of the input alignment files to be merged and sometimes several
+times larger. If you're merging large alignments or you're
+experiencing very slow performance of
+.B esl-alimerge,
+try reformatting to Pfam and using
+.B --savemem.
 
 .SH OPTIONS
 
@@ -90,6 +113,14 @@ This option can only be used in combination with the
 .B -o 
 option (so that the printed info doesn't corrupt the output alignment
 file).
+
+.TP
+.B --savemem
+Operate in memory saving mode. Required RAM will be independent of the
+sizes of the alignments to merge, instead of roughly the size of the
+eventual merged alignment. When enabled, all alignments must be in
+Pfam Stockholm (non-interleaved 1 line/seq) format (see
+esl-reformat) and the output alignment will be in Pfam format.
 
 .TP
 .B --rfonly
