--- a/miniapps/esl-alimerge.man
+++ b/miniapps/esl-alimerge.man
@@ -68,19 +68,19 @@ line contains a single word: the name of an alignment file to be
 merged. All alignments in each file will be merged.
 
 With the
-.B --savemem
+.B --small
 option, 
 .B esl-alimerge
 will operate in memory saving mode and the required RAM for the merge
 will be minimal (should be only a few Mb) and independent of the
 alignment sizes. To use 
-.B --savemem,
+.B --small,
 all alignments must be in Pfam format (non-interleaved, 1
 line/sequence Stockholm format). You can reformat alignments to Pfam
 using the
 .B esl-reformat
 Easel miniapp. Without 
-.B --savemem
+.B --small
 the required RAM will be equal to roughly the size of the final merged
 alignment file which will necessarily be at least the summed size of
 all of the input alignment files to be merged and sometimes several
@@ -88,7 +88,7 @@ times larger. If you're merging large alignments or you're
 experiencing very slow performance of
 .B esl-alimerge,
 try reformatting to Pfam and using
-.B --savemem.
+.B --small.
 
 .SH OPTIONS
 
@@ -115,7 +115,7 @@ option (so that the printed info doesn't corrupt the output alignment
 file).
 
 .TP
-.B --savemem
+.B --small
 Operate in memory saving mode. Required RAM will be independent of the
 sizes of the alignments to merge, instead of roughly the size of the
 eventual merged alignment. When enabled, all alignments must be in
