esl-alistat: Added --small option for small memory mode. With --small 	     esl-alistat does not store the MSAs in memory, and prints 	     a subset of the stats it normally does (omitting 	     smallest, largest raw seq lengths, and average 	     id). --small requires --informat pfam and one of --rna, 	     --dna, or --amino. Updated man page to include --small 	     option.
esl_msa.c:   small bug fix with reading Pfam alignment files in small
	     memory mode.

esl_distance.c: After discussing with Sean, added comments to
		esl_dst_XPairId() and esl_dst_CPairId() describing how
		the former does not handle degeneracies, but could
		with esl_abc_Match(). "Fixing" this is postponed for
		a later time.


git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@495 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/esl-alistat.man
+++ b/miniapps/esl-alistat.man
@@ -41,7 +41,31 @@ pipelines to make
 .B esl-alistat 
 more robust; alphabet autodetection is not infallible.
 
-
+The 
+.B --small
+option allows summarizing alignments without storing them in memory
+and can be useful for large alignment files with sizes that approach
+or exceed the amount of available RAM.  When
+.B --small
+is used, 
+.B esl-alistat
+will print fewer statistics on the alignment, omitting data on the
+smallest and largest sequences and the average identity of the
+alignment.
+.B --small
+only works on Pfam formatted alignments (a special type of
+non-interleaved Stockholm alignment in which each sequence occurs on a
+single line) and 
+.BI --informat " pfam"
+must be given with
+.B --small.
+Further, when 
+.B --small
+is used, the alphabet must be specified with
+.I --amino,
+.I --dna,
+or 
+.I --rna.
 
 .SH OPTIONS
 
@@ -80,6 +104,17 @@ contains DNA sequences.
 Assert that the 
 .I msafile 
 contains RNA sequences. 
+
+.TP 
+.B --small
+Operate in small memory mode for Pfam formatted alignments.
+.BI --informat " pfam"
+and one of
+.B --amino,
+.B --dna,
+or
+.B --rna
+must be given as well.
 
 .SH AUTHOR
 
