--- a/miniapps/esl-reformat.man
+++ b/miniapps/esl-reformat.man
@@ -28,9 +28,10 @@ argument must (case-insensitively) match a supported sequence file format:
 currently, limited to
 .I fasta,
 .I stockholm,
+.I pfam,
 or
-.I pfam.
-
+.I afa
+(aligned fasta).
 
 .pp
 Unaligned format files cannot be reformatted to
@@ -38,8 +39,6 @@ aligned formats.
 However, aligned formats can be reformatted
 to unaligned formats - gap characters are 
 simply stripped out.
-
-
 
 .SH OPTIONS
 
@@ -162,6 +161,21 @@ at all. Useful as a prelude to phylogenetic analyses, where
 you only want to analyze columns containing 100% residues,
 so you want to strip out any columns with gaps in them.
 Only makes sense if the file is an alignment file.
+
+.TP
+.B --small
+Operate in small memory mode for input alignment files in 
+Pfam format. If not used, each alignment is stored in memory so the
+required memory will be roughly the size of the largest alignment
+in the input file. With 
+.B --small, 
+input alignments are not stored in memory. 
+This option only works in combination with 
+.BI --informat " pfam"
+and output format 
+.I pfam
+or
+.I afa. 
 
 .TP
 .B --wussify
